# stratuscode

./: .gitignore  .npmrc  Cargo.toml  README.md  bunfig.toml  package.json  stratus-code-design-system.md  stratuscode.json  turbo.json
.github/workflows/: ci.yml
crates/stratuscode-cli/: Cargo.toml
crates/stratuscode-cli/src/: app.rs  backend.rs  commands.rs  constants.rs  input.rs  main.rs  ui.rs
notes/: tui-parity.md
