[package]
name = "stratuscode"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.26"
crossterm = "0.27"
textwrap = "0.16"
walkdir = "2.5"
base64 = "0.22"
arboard = "3.4"
pulldown-cmark = "0.9"
unicode-width = "0.1"
